@@ -77,6 +77,7 @@ EL::StatusCode MiniReaderAlg :: changeInput (bool firstFile)
   m_mu.ReadMuonBranches(tree);
   m_met.ReadMissingETBranches(tree);
   m_runp.ReadEventInfoBranches(tree);
+  m_cross.ReadCrossSectionBranches(tree);
 
   return EL::StatusCode::SUCCESS;
 }
@@ -113,6 +114,8 @@ EL::StatusCode MiniReaderAlg :: execute ()
   PR(m_mu.m_mu_pt->size());
   PR(m_met.m_EtMissMuVeto);
   PR(m_runp.m_actualInteractionsPerCrossing);
+  PR(m_cross.m_process_xs8);
+  PR(*m_cross.m_process_name8);
 
   // Fill Histos:
   FillJets();
